# aimingmed-ai

./: .gitignore  README.md
.github/workflows/: app-testing.yml  build.yml  build_new.yml  debug_env.yml  develop.yml  template_build.yml  template_test.yml  template_unit_pytest.yml  unittest_backend.yml
.github/workflows/obsolete/: app-testing.yml
.github/workflows/templates/: template_build.yml
app/: README.md  docker-compose.yml
app/backend/: Dockerfile  Dockerfile.prod  Pipfile  config.py  main.py
app/backend/api/: chatbot.py  ping.py  query.py  utils.py
app/backend/tests/: conftest.py  test_config_and_main.py
app/backend/utils/: initialize_sentence_transformer.py
app/frontend/: .env.production  .env.test  Dockerfile.test  package-lock.json  package.json  vite.config.ts
app/frontend/src/: App.test.tsx  App.tsx  vite-env.d.ts
app/llm-template/: Pipfile  config.py  main.py
app/llm-template/chains/: qa_chain.py  rag_chain.py  summarization_chain.py
app/llmops/: DockerFile  MLproject  Pipfile  README.md  config.yaml  main.py  python_env.yml
app/proto-docs/: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
app/proto-docs/docs/: code_quality.md  computer_setup.md  documentation.md  index.md  logging.md  virtual_environment.md
app/proto-docs/src/proto_docs/: cli.py  logger.py
app/streamlit/: Chatbot.py  Dockerfile  Pipfile  app_test.py  initialize_sentence_transformer.py  requirements.txt
app/tests/: Pipfile
scripts/llm-template/: Pipfile  README.md  main.py  main_old.py  requirements.txt
(+59 files in other folders)
