[tool.poetry]
name = "proto-docs"
version = "0.1.0"
description = ""
authors = ["Lee Hong Kai <leehongkai@gmail.com>"]
readme = "README.md"
packages = [{ include = "proto_docs", from = "src" }]

[tool.poetry.dependencies]
python = "~3.11"
typer = { extras = ["all"], version = "~0.9.0" }
rich = "~13.3.5"


[tool.poetry.group.dev.dependencies]
pytest = "~7.3.1"
coverage = "~7.2.5"
pytest-cov = "~4.0.0"
pytest-mock = "~3.10.0"
jupyter = "~1.0.0"
black = "~23.3.0"
ruff = "~0.0.267"
pyright = "~1.1.308"
tox = "~4.5.1"


[tool.poetry.group.doc.dependencies]
mkdocs = "~1.4.3"
mkdocs-material = "~9.1.12"
mkdocstrings = { extras = ["python"], version = "~0.21.2" }
mkdocs-jupyter = "~0.24.1"

[tool.poetry.scripts]
main = "proto_docs.cli:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
